--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
   <dialog id="main-dialog" open>
     <form>
-      <div>
+      <div id="player1-div">
         <label>Player 1</label><br>
         <input type="text" id="player1-name" placeholder="Name">
         <select name="player1-color" id="player1-color">
@@ -39,7 +39,7 @@
           <option value="O">O</option>
         </select>
       </div>
-      <div>
+      <div id="player2-div">
         <label>Player 2</label><br>
         <input type="text" id="player2-name" placeholder="Name">
         <select name="player2-color" id="player2-color">
