improving winner message

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
   </section>
   <dialog id="main-dialog" open>
+    <h1 class="lights-on">TIC-TAC-TOE</h1>
     <form>
       <div id="player1-div">
         <label>Player 1</label><br>
